--- a/.github/workflows/gorelease.yml
+++ b/.github/workflows/gorelease.yml
@@ -29,9 +29,7 @@ jobs:
           test -e ~/go/bin/gorelease || go install golang.org/x/exp/cmd/gorelease@latest
           OUTPUT=$(gorelease || exit 0)
           echo "${OUTPUT}"
-          OUTPUT="${OUTPUT//'%'/'%25'}"
-          OUTPUT="${OUTPUT//$'\n'/'%0A'}"
-          OUTPUT="${OUTPUT//$'\r'/'%0D'}"
+          OUTPUT="${OUTPUT//$'\n'/%0A}"
           echo "::set-output name=report::$OUTPUT"
       - name: Comment Report
         continue-on-error: true
